--- a/main.tex
+++ b/main.tex
@@ -138,7 +138,8 @@ bottom=2cm,%
     \subfile{1.Introduction}
     \newpage
     \subfile{2.ThreadCommunication}
-    % \newpage
+    \newpage
+    \subfile{3.ExploitParallelism}
     % \subfile{2.Parallelism}
     % \newpage
     % \subfile{3.Concurrency}
