Draft for fork/join within chapter 5

--- a/2.Parallelism.tex
+++ b/2.Parallelism.tex
@@ -90,7 +90,7 @@ It has to be noted that Gustafson's law and Amdahls law aren't really different 
 %==============================================================================================================================
 %==============================================================================================================================
 
-\subsection{Divide \& Conquer} \label{Divide \& Conquer}
+\subsection{Divide and Conquer} \label{Divide and Conquer}
 In divide \& conquer we split a problem into smaller subproblems, solve the task recursively for each of these and combine the results such that we obtain the final result for the entire problem. To see how this approach works, let's construct a small example:
 \begin{example}
     Through some weird twist of faith, we're given a list of the number of clocks each Swiss citizen posseses and are tasked with finding the maximum among all of these. For the sake of simplicity, suppose this list only has eight entries. 
@@ -462,8 +462,8 @@ Over the years it has become evident that improving sequential processor perform
         \item\ Reading book B takes 40 minutes
         \item\ Reading book C takes 120 minutes
         \item\ Reading book D takes 40 minutes
-    \end{enumerate}\\
-    Unfortunately, the library only has a single copy of each book.
+    \end{enumerate}
+     Unfortunately, the library only has a single copy of each book.
         \Question Let's assume all law students are a bit too competitive and don't return any books before they're done reading all of them. How long will it take for 4 students until all of them have started writing their essays?
         \Question The library introduces a ''one book at a time'' policy, i.e. the students have to return a book before they can start on the next one. How long will it now take for 4 students until all of them have started writing their essays? What is the throughput of this ''pipeline'' per hour? What is the latency?
         \Question Where is the problem with this system? What can the library do to solve this problem?
