--- a/main.tex
+++ b/main.tex
@@ -140,8 +140,8 @@ bottom=2cm,%
     \subfile{2.ThreadCommunication}
     \newpage
     \subfile{3.ExploitParallelism}
-    % \subfile{2.Parallelism}
-    % \newpage
+    \newpage
+    \subfile{5.ParallelAlgos}
     % \subfile{3.Concurrency}
     % \newpage
     % \subfile{4.AdditionalTopics}
