--- a/main.tex
+++ b/main.tex
@@ -113,7 +113,7 @@ bottom=2cm,%
 		\begin{center}
 		\huge \textbf{Parallel Programming \\ Inofficial Course Script}
 		\\ \bigskip
-		\Large Last Updated: March, 2023
+		\Large Last Updated: April, 2023
 		\\ \bigskip
 		% \large Author: Sascha Kehrli
 		% \\ \bigskip
@@ -142,11 +142,6 @@ bottom=2cm,%
     \subfile{3.ExploitParallelism}
     \newpage
     \subfile{5.ParallelAlgos}
-    % \subfile{3.Concurrency}
-    % \newpage
-    % \subfile{4.AdditionalTopics}
-    % \newpage
-    % \subfile{5.FurtherReading}
-    % \subfile{6.Changelog}
-    % \newpage
+    \newpage
+    \subfile{6.Locking}
 \end{document}
