Finish Amdahl/Gustafson Chapter. Final draft of script.

--- a/main.tex
+++ b/main.tex
@@ -141,6 +141,8 @@ bottom=2cm,%
     \newpage
     \subfile{3.ExploitParallelism}
     \newpage
+    \subfile{4.MeasuringParallelism}
+    \newpage
     \subfile{5.ParallelAlgos}
     \newpage
     \subfile{6.Locking}
